--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>test</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	</head>
-	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="jquery-2.1.4.min.js"></script>
 	<textarea id="passwordEncryptText" rows="3" cols="50"></textarea>
 	<button id="passwordEncrypt">加密</button>
 	<button id="passwordDecrypt">解密</button>
