--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			}
 		}
 
-		//补足指定位数补0
+		//不足指定位数补0
 		function PrefixInteger(num, length) {
 			return(Array(length).join('0') + num).slice(-length);
 		}
