--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>test</title>
+		<title>XXL-加密/解密</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	</head>
 	<script type="text/javascript" src="jquery-2.1.4.min.js"></script>
